--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/CreateOrJoinGame_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/CreateOrJoinGame_scene.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -44,7 +40,7 @@
                         <Insets bottom="60.0" />
                     </VBox.margin>
                 </VBox>
-                <Label prefHeight="63.0" prefWidth="562.0" text=" Please choose what you d like to do" textFill="WHITE">
+                <Label alignment="CENTER" prefHeight="63.0" prefWidth="562.0" text=" Please choose what you d like to do" textFill="WHITE">
                     <font>
                         <Font name="Libian SC Regular" size="36.0" />
                     </font>
@@ -54,45 +50,31 @@
                 </Label>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="1489.0">
                     <children>
-                  <AnchorPane prefHeight="222.0" prefWidth="1510.0">
-                     <children>
-                        <Button fx:id="CreateNewGame" layoutX="616.0" layoutY="-3.0" mnemonicParsing="false" onMouseClicked="#CreateGame" prefHeight="60.0" prefWidth="314.0" text="CREATE A NEW GAME " textFill="#fff4f4">
-                           <font>
-                              <Font name="Libian SC Regular" size="13.0" />
-                           </font>
-                        </Button>
-                        <Button fx:id="joinGame" layoutX="615.0" layoutY="68.0" mnemonicParsing="false" onMouseClicked="#JoinGame" prefHeight="60.0" prefWidth="314.0" text="JOIN A  GAME " textFill="#fff4f4">
-                           <font>
-                              <Font name="Libian SC Regular" size="13.0" />
-                           </font>
-                        </Button>
-                        <Button fx:id="EXIT" layoutX="615.0" layoutY="146.0" mnemonicParsing="false" onMouseClicked="#ExitGame" prefHeight="60.0" prefWidth="314.0" text="EXIT" textFill="#fff4f4">
-                           <font>
-                              <Font name="Libian SC Regular" size="13.0" />
-                           </font>
-                        </Button>
-                        <Group fx:id="NoGamesInLobby" layoutX="731.0" layoutY="37.0">
-                           <children>
-                              <DialogPane fx:id="NolobbygamesPane" layoutX="-276.0" layoutY="-44.0" prefHeight="190.0" prefWidth="526.0" visible="false">
-                                 <effect>
-                                    <GaussianBlur />
-                                 </effect>
-                              </DialogPane>
-                              <Button fx:id="OkBtn" layoutX="-36.0" layoutY="42.0" mnemonicParsing="false" onMouseClicked="#PanelDisappearing" text="OK" textFill="WHITE" visible="false">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Button>
-                              <Label fx:id="NoLobbyGamesText" layoutX="-177.0" layoutY="-34.0" prefHeight="53.0" prefWidth="341.0" text="No available games in the lobby" visible="false">
-                                 <font>
-                                    <Font name="Libian SC Regular" size="28.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </Group>
-                     </children>
-                  </AnchorPane>
+                  <Button fx:id="CreateNewGame" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#CreateGame" prefHeight="70.0" prefWidth="314.0" text="CREATE A NEW GAME " textFill="#fff4f4">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="joinGame" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#JoinGame" prefHeight="70.0" prefWidth="314.0" text="JOIN A  GAME " textFill="#fff4f4">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="EXIT" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#ExitGame" prefHeight="70.0" prefWidth="314.0" text="EXIT" textFill="#fff4f4">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
                     </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
                 </VBox>
                 <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
                     <children>
