--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/NumberofPlayers_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/NumberofPlayers_scene.fxml
@@ -1,85 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.NumberOfPlayersController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/server_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.NumberOfPlayersController">
     <children>
-        <Group scaleX="2.45" scaleY="1.9">
+        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
-                <AnchorPane fx:id="PaneforParquet" prefHeight="490.0" prefWidth="623.0" styleClass="rootPane" stylesheets="@../css/server_scene.css">
+                <VBox prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <ImageView fitHeight="165.0" fitWidth="173.0" layoutX="1.0" layoutY="367.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Piante1.2.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="165.0" fitWidth="174.0" layoutX="165.0" layoutY="367.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Gatti1.1.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="165.0" fitWidth="294.0" layoutX="329.0" layoutY="366.0">
-                            <image>
-                                <Image url="@../itemtiles/Libri1.2.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="146.0" fitWidth="173.0" layoutX="207.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fitHeight="183.0" fitWidth="197.0" layoutX="258.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Giochi1.1.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="184.0" fitWidth="183.0" layoutX="440.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Cornici1.3.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="183.0" fitWidth="266.0" layoutX="-1.0" layoutY="-4.0">
-                            <image>
-                                <Image url="@../itemtiles/Trofei1.1.png" />
-                            </image>
-                        </ImageView>
-                        <Label layoutX="186.0" layoutY="162.0" prefHeight="68.0" prefWidth="309.0" text="choose the number of players:" textFill="WHITE">
-                            <font>
-                                <Font name="Libian SC Regular" size="24.0" />
-                            </font>
-                        </Label>
-                        <RadioButton fx:id="two_players" layoutX="203.0" layoutY="225.0" mnemonicParsing="false" onMouseClicked="#two_p" prefHeight="50.0" prefWidth="12.0" text="2">
-                            <font>
-                                <Font name="Libian SC Regular" size="18.0" />
-                            </font>
-                        </RadioButton>
-                        <RadioButton fx:id="three_players" layoutX="292.0" layoutY="225.0" mnemonicParsing="false" onMouseClicked="#three_p" prefHeight="50.0" prefWidth="12.0" text="3">
-                            <font>
-                                <Font name="Libian SC Regular" size="18.0" />
-                            </font>
-                        </RadioButton>
-                        <RadioButton fx:id="four_players" layoutX="375.0" layoutY="227.0" mnemonicParsing="false" onMouseClicked="#four_p" prefHeight="50.0" prefWidth="12.0" text="4">
-                            <font>
-                                <Font name="Libian SC Regular" size="18.0" />
-                            </font>
-                        </RadioButton>
-                        <Button fx:id="ok" layoutX="294.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#NumberofPlayerChosen" text="ok" textFill="#fffdfd">
-                            <font>
-                                <Font name="Libian SC Regular" size="13.0" />
-                            </font>
-                        </Button>
-                  <Label fx:id="MissingNumberLabel" layoutX="153.0" layoutY="321.0" text="Please  choose the number of players before enter " textFill="#d02d2d" visible="false">
-                     <font>
-                        <Font name="Libian SC Regular" size="18.0" />
-                     </font>
-                  </Label>
+                        <HBox alignment="CENTER" prefHeight="221.0" prefWidth="1510.0">
+                            <children>
+                                <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Giochi1.1.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Cornici1.3.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Trofei1.1.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                        </HBox>
                     </children>
-                </AnchorPane>
+                    <VBox.margin>
+                        <Insets bottom="60.0" />
+                    </VBox.margin>
+                </VBox>
+                <Label alignment="CENTER" prefHeight="53.0" prefWidth="549.0" text="Choose the number of players" textFill="WHITE">
+                    <font>
+                        <Font name="Libian SC Regular" size="36.0" />
+                    </font>
+                    <VBox.margin>
+                        <Insets bottom="40.0" />
+                    </VBox.margin>
+                </Label>
+                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                    <children>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <RadioButton fx:id="twoPlayers" mnemonicParsing="false" prefHeight="40.0" text="2" textFill="WHITE">
+                                    <font>
+                                        <Font size="25.0" />
+                                    </font>
+                                    <HBox.margin>
+                                        <Insets right="50.0" />
+                                    </HBox.margin>
+                                    <toggleGroup>
+                                        <ToggleGroup fx:id="numbers" />
+                                    </toggleGroup>
+                                </RadioButton>
+                                <RadioButton fx:id="threePlayers" mnemonicParsing="false" prefHeight="40.0" text="3" textFill="WHITE" toggleGroup="$numbers">
+                                    <font>
+                                        <Font size="25.0" />
+                                    </font>
+                                    <HBox.margin>
+                                        <Insets right="50.0" />
+                                    </HBox.margin>
+                                </RadioButton>
+                                <RadioButton fx:id="fourPlayers" mnemonicParsing="false" prefHeight="40.0" text="4" textFill="WHITE" toggleGroup="$numbers">
+                                    <font>
+                                        <Font size="25.0" />
+                                    </font>
+                                </RadioButton>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="-40.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <Button fx:id="okButton" mnemonicParsing="false" onMouseClicked="#numberOfPlayerChosen" prefHeight="56.0" prefWidth="157.0" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
+                            <font>
+                                <Font size="26.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="10.0" />
+                            </VBox.margin>
+                        </Button>
+                        <Label fx:id="missingNumberLabel" text="Please  choose the number of players before enter " textFill="#d02d2d" visible="false">
+                            <font>
+                                <Font size="24.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="20.0" />
+                            </VBox.margin>
+                        </Label>
+                    </children>
+                </VBox>
+                <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
+                    <children>
+                        <HBox alignment="BOTTOM_CENTER" prefHeight="273.0" prefWidth="1513.0">
+                            <children>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Piante1.2.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Gatti1.1.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Libri1.2.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
             </children>
-        </Group>
+        </VBox>
     </children>
 </StackPane>
