--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -88,14 +88,14 @@
                     <children>
                         <Group>
                             <children>
-                                <AnchorPane prefHeight="297.0" prefWidth="388.0">
+                                <AnchorPane prefHeight="274.0" prefWidth="388.0">
                                     <children>
-                                        <ImageView fx:id="commonGoalCard1" fitHeight="175.0" fitWidth="269.0" layoutX="34.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="commonGoalCard1" fitHeight="175.0" fitWidth="269.0" layoutX="61.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
                                                 <Image url="@../common%20goal%20cards/12.jpg" />
                                             </image>
                                         </ImageView>
-                                        <StackPane layoutX="196.0" layoutY="182.0" prefHeight="62.0" prefWidth="62.0" rotate="-81.5">
+                                        <StackPane layoutX="223.0" layoutY="123.0" prefHeight="62.0" prefWidth="62.0" rotate="-81.5">
                                             <rotationAxis>
                                                 <Point3D z="-1.0" />
                                             </rotationAxis>
@@ -116,9 +116,9 @@
                                                     </image></ImageView>
                                             </children>
                                         </StackPane>
-                                        <Label layoutX="42.0" layoutY="19.0" prefHeight="79.0" prefWidth="318.0" text="Common Goal Cards" textFill="#fffdfd">
+                                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="19.0" prefHeight="35.0" prefWidth="285.0" text="Common Goal Cards" textFill="#fffdfd">
                                             <font>
-                                                <Font name="Libian SC Regular" size="36.0" />
+                                                <Font size="24.0" />
                                             </font>
                                         </Label>
                                     </children>
@@ -127,14 +127,14 @@
                         </Group>
                         <Group>
                             <children>
-                                <AnchorPane prefHeight="220.0" prefWidth="374.0">
+                                <AnchorPane prefHeight="194.0" prefWidth="374.0">
                                     <children>
-                                        <ImageView fx:id="commonGoalCard2" fitHeight="175.0" fitWidth="269.0" layoutX="36.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="commonGoalCard2" fitHeight="175.0" fitWidth="269.0" layoutX="61.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
                                                 <Image url="@../common%20goal%20cards/9.jpg" />
                                             </image>
                                         </ImageView>
-                                        <StackPane layoutX="197.0" layoutY="82.0" prefHeight="67.0" prefWidth="67.0" rotate="-7.6">
+                                        <StackPane layoutX="222.0" layoutY="47.0" prefHeight="67.0" prefWidth="67.0" rotate="-7.6">
                                             <children>
                                                 <ImageView fx:id="Second_2" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true">
                                                     <image>
@@ -163,23 +163,36 @@
                             </children>
                         </Group>
                         <Group />
-                        <AnchorPane fx:id="playerBookshelves" prefHeight="224.0" prefWidth="371.0">
+                        <AnchorPane fx:id="playerBookshelves" prefHeight="271.0" prefWidth="388.0">
                             <children>
-                                <Button layoutX="36.0" layoutY="33.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="303.0" text="NIckname'sBookshelf" textFill="WHITE">
-                                    <font>
-                                        <Font name="Libian SC Regular" size="15.0" />
-                                    </font>
-                                </Button>
-                                <Button layoutX="36.0" layoutY="88.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="303.0" styleClass="button" stylesheets="@../css/livingBoard_scene.css" text="Nickname'sBookshelf" textFill="WHITE">
-                                    <font>
-                                        <Font name="Libian SC Regular" size="13.0" />
-                                    </font>
-                                </Button>
-                                <Button layoutX="36.0" layoutY="144.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="303.0" text="Nickname'sBookshelf" textFill="WHITE">
-                                    <font>
-                                        <Font name="Libian SC Regular" size="13.0" />
-                                    </font>
-                                </Button>
+                        <GridPane fx:id="otherBookshelf" hgap="10.0" layoutX="74.0" layoutY="69.0" prefHeight="200.0" prefWidth="200.0" vgap="5.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <padding>
+                              <Insets bottom="14.0" left="16.0" right="21.0" top="11.0" />
+                           </padding>
+                        </GridPane>
+                        <ImageView fitHeight="225.0" fitWidth="222.0" layoutX="60.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../boards/bookshelf.png" />
+                           </image>
+                        </ImageView>
+                        <Button fx:id="nextPlayer" layoutX="233.0" layoutY="29.0" mnemonicParsing="false" prefHeight="5.0" prefWidth="29.0" text="&gt;" textFill="WHITE" />
+                        <Button fx:id="previousPlayer" layoutX="74.0" layoutY="29.0" mnemonicParsing="false" prefHeight="5.0" prefWidth="29.0" text="&lt;" textFill="WHITE" />
+                        <Button fx:id="playerBookshelf" layoutX="105.0" layoutY="29.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Player Name" textFill="WHITE" />
                             </children>
                         </AnchorPane>
                     </children>
@@ -190,7 +203,7 @@
                     <children>
                         <AnchorPane prefHeight="787.0" prefWidth="495.0">
                             <children>
-                                <Group fx:id="tilePack">
+                                <Group fx:id="tilePack" layoutX="-2.0" layoutY="-30.0">
                                     <ImageView fitHeight="69.0" fitWidth="70.0" layoutX="150.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                                         <image>
                                             <Image url="@../itemtiles/Piante1.1.png" />
@@ -209,7 +222,7 @@
                                 </Group>
                                 <AnchorPane layoutX="85.0" layoutY="178.0" prefHeight="366.0" prefWidth="349.0">
                                     <children>
-                                        <GridPane fx:id="bookshelf" hgap="15.0" layoutX="28.0" layoutY="16.0" prefHeight="300.0" prefWidth="300.0" vgap="10.0">
+                                        <GridPane fx:id="bookshelf" hgap="15.0" layoutX="28.0" layoutY="-44.0" prefHeight="300.0" prefWidth="300.0" vgap="10.0">
                                             <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -229,32 +242,34 @@
                                                 <Insets bottom="14.0" left="16.0" right="21.0" top="11.0" />
                                             </padding>
                                         </GridPane>
-                                        <ImageView fitHeight="365.0" fitWidth="350.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fitHeight="365.0" fitWidth="350.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
                                                 <Image url="@../boards/bookshelf.png" />
                                             </image>
                                         </ImageView>
+                                      <Group fx:id="columnOptions" layoutX="-87.0" layoutY="-214.0">
+                                          <RadioButton fx:id="Column1" accessibleRole="CHECK_BOX" layoutX="141.0" layoutY="162.0" mnemonicParsing="false">
+                                              <toggleGroup>
+                                                  <ToggleGroup fx:id="columnOption" />
+                                              </toggleGroup>
+                                 </RadioButton>
+                                          <RadioButton fx:id="Column2" layoutX="200.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
+                                          <RadioButton fx:id="Column4" layoutX="310.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
+                                          <RadioButton fx:id="Column5" layoutX="368.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
+                                          <RadioButton fx:id="Column3" layoutX="256.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
+                                      </Group>
+      
+                                      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="73.0" layoutY="295.0" prefHeight="35.0" prefWidth="210.0" text="Personal Goal Card" textFill="WHITE">
+                                          <font>
+                                              <Font size="20.0" />
+                                          </font>
+                              </Label>
                                     </children></AnchorPane>
-                                <ImageView fx:id="personalCard" fitHeight="200.0" fitWidth="143.0" layoutX="208.0" layoutY="566.0">
+                                <ImageView fx:id="personalCard" fitHeight="245.0" fitWidth="163.0" layoutX="179.0" layoutY="507.0">
                                     <image>
                                         <Image url="@../personal%20goal%20cards/Personal_Goals3.png" />
                                     </image>
                                 </ImageView>
-                                <Group fx:id="columnOptions">
-                                    <RadioButton fx:id="Column1" layoutX="141.0" layoutY="161.0" mnemonicParsing="false">
-                                        <toggleGroup>
-                                            <ToggleGroup fx:id="columnOption" />
-                                        </toggleGroup></RadioButton>
-                                    <RadioButton fx:id="Column2" layoutX="200.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
-                                    <RadioButton fx:id="Column4" layoutX="310.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
-                                    <RadioButton fx:id="Column5" layoutX="368.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
-                                    <RadioButton fx:id="Column3" layoutX="256.0" layoutY="161.0" mnemonicParsing="false" toggleGroup="$columnOption" />
-                                </Group>
-
-                                <Label layoutX="197.0" layoutY="532.0" prefHeight="23.0" prefWidth="174.0" text="Personal Goal Card" textFill="WHITE">
-                                    <font>
-                                        <Font name="Libian SC Regular" size="24.0" />
-                                    </font></Label>
                             </children>
                         </AnchorPane>
                     </children>
