--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,9 +18,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="761.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
     <children>
-        <BorderPane prefHeight="785.0" prefWidth="1512.0" style="-fx-border-width: 10;">
+        <BorderPane prefHeight="908.0" prefWidth="1510.0" style="-fx-border-width: 10;">
             <center>
                 <Group BorderPane.alignment="CENTER">
                     <children>
@@ -222,7 +220,7 @@
                                 </Group>
                                 <AnchorPane layoutX="85.0" layoutY="178.0" prefHeight="366.0" prefWidth="349.0">
                                     <children>
-                                        <GridPane fx:id="bookshelf" hgap="15.0" layoutX="28.0" layoutY="-44.0" prefHeight="300.0" prefWidth="300.0" vgap="10.0">
+                                        <GridPane fx:id="bookshelf" disable="true" hgap="15.0" layoutX="28.0" layoutY="-44.0" prefHeight="300.0" prefWidth="300.0" vgap="10.0">
                                             <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -242,30 +240,22 @@
                                                 <Insets bottom="14.0" left="16.0" right="21.0" top="11.0" />
                                             </padding>
                                         </GridPane>
-                                        <ImageView fitHeight="365.0" fitWidth="350.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fitHeight="365.0" fitWidth="358.0" layoutX="-8.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
                                                 <Image url="@../boards/bookshelf.png" />
                                             </image>
                                         </ImageView>
-                                      <Group fx:id="columnOptions" layoutX="-87.0" layoutY="-214.0">
-                                          <RadioButton fx:id="Column1" layoutX="141.0" layoutY="162.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn1">
-                                              <toggleGroup>
-                                                  <ToggleGroup fx:id="columnOption" />
-                                              </toggleGroup>
-                                 </RadioButton>
-                                          <RadioButton fx:id="Column2" layoutX="200.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn2" toggleGroup="$columnOption" />
-                                          <RadioButton fx:id="Column4" layoutX="310.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn4" toggleGroup="$columnOption" />
-                                          <RadioButton fx:id="Column5" layoutX="368.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn5" toggleGroup="$columnOption" />
-                                          <RadioButton fx:id="Column3" layoutX="256.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn3" toggleGroup="$columnOption" />
-                                 <Button fx:id="column1" onMouseClicked="#InsertInColumn1" layoutX="133.0" layoutY="158.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="33.0" text="Button" />
-                                      </Group>
       
                                       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="73.0" layoutY="295.0" prefHeight="35.0" prefWidth="210.0" text="Personal Goal Card" textFill="WHITE">
                                           <font>
                                               <Font size="20.0" />
                                           </font>
                               </Label>
-                              <Button fx:id="prova" layoutX="41.0" layoutY="-34.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn1" prefHeight="275.0" prefWidth="45.0" text="Button" visible="false" />
+                              <Button id="column" fx:id="Column2" layoutX="91.0" layoutY="-32.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn2" prefHeight="280.0" prefWidth="45.0" />
+                              <Button id="column" fx:id="Column3" layoutX="149.0" layoutY="-33.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn3" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
+                              <Button id="column" fx:id="Column4" layoutX="207.0" layoutY="-34.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn4" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
+                              <Button id="column" fx:id="Column5" layoutX="261.0" layoutY="-34.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn5" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
+                              <Button id="column" fx:id="Column1" layoutX="35.0" layoutY="-32.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn1" prefHeight="280.0" prefWidth="45.0" />
                                     </children></AnchorPane>
                                 <ImageView fx:id="personalCard" fitHeight="245.0" fitWidth="163.0" layoutX="179.0" layoutY="507.0">
                                     <image>
