GUI insertion of tiles in the bookshelf

--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -220,6 +220,11 @@
                                 </Group>
                                 <AnchorPane layoutX="85.0" layoutY="178.0" prefHeight="366.0" prefWidth="349.0">
                                     <children>
+                                        <ImageView fitHeight="365.0" fitWidth="358.0" layoutX="-8.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true">
+                                            <image>
+                                                <Image url="@../boards/bookshelf.png" />
+                                            </image>
+                                        </ImageView>
                                         <GridPane fx:id="bookshelf" disable="true" hgap="15.0" layoutX="28.0" layoutY="-44.0" prefHeight="300.0" prefWidth="300.0" vgap="10.0">
                                             <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -240,22 +245,21 @@
                                                 <Insets bottom="14.0" left="16.0" right="21.0" top="11.0" />
                                             </padding>
                                         </GridPane>
-                                        <ImageView fitHeight="365.0" fitWidth="358.0" layoutX="-8.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@../boards/bookshelf.png" />
-                                            </image>
-                                        </ImageView>
       
                                       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="73.0" layoutY="295.0" prefHeight="35.0" prefWidth="210.0" text="Personal Goal Card" textFill="WHITE">
                                           <font>
                                               <Font size="20.0" />
                                           </font>
                               </Label>
-                              <Button id="column" fx:id="Column2" layoutX="91.0" layoutY="-32.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn2" prefHeight="280.0" prefWidth="45.0" />
-                              <Button id="column" fx:id="Column3" layoutX="149.0" layoutY="-33.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn3" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
-                              <Button id="column" fx:id="Column4" layoutX="207.0" layoutY="-34.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn4" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
-                              <Button id="column" fx:id="Column5" layoutX="261.0" layoutY="-34.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn5" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
-                              <Button id="column" fx:id="Column1" layoutX="35.0" layoutY="-32.0" mnemonicParsing="false" onMouseClicked="#InsertInColumn1" prefHeight="280.0" prefWidth="45.0" />
+                              <Group fx:id="columnButtons" layoutX="35.0" layoutY="-34.0">
+                                 <children>
+                                    <Button id="column" fx:id="Column1" layoutX="3.0" mnemonicParsing="false" onMouseClicked="#insertInColumn" prefHeight="280.0" prefWidth="45.0" />
+                                    <Button id="column" fx:id="Column2" layoutX="56.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#insertInColumn" prefHeight="280.0" prefWidth="45.0" />
+                                    <Button id="column" fx:id="Column3" layoutX="114.0" layoutY="1.0" mnemonicParsing="false" onMouseClicked="#insertInColumn" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
+                                    <Button id="column" fx:id="Column4" layoutX="172.0" mnemonicParsing="false" onMouseClicked="#insertInColumn" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
+                                    <Button id="column" fx:id="Column5" layoutX="226.0" mnemonicParsing="false" onMouseClicked="#insertInColumn" prefHeight="280.0" prefWidth="45.0" styleClass="column" />
+                                 </children>
+                              </Group>
                                     </children></AnchorPane>
                                 <ImageView fx:id="personalCard" fitHeight="245.0" fitWidth="163.0" layoutX="179.0" layoutY="507.0">
                                     <image>
